--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,42 @@
 version: "3.0"
 services:
   server:
-    image: tiagoti2/python:3.6
+    container_name: web_server
+    image: tiagoti2/python:3.6.0001
     tty: true
     working_dir: /app
     expose:
       - "8080"
     ports:
-      - "8080:8080"
+      - "5000:8080"
     environment:
       - PORT=80
     volumes:
       - .:/app
     command: ["gunicorn", "--bind", "0.0.0.0:8080", "--workers", "2", "--threads", "2", "wsgi:app"]
+    depends_on:
+      - queue
+      - worker
+    links:
+      - queue
+  worker:
+    container_name: worker
+    image: tiagoti2/python:3.6.0001
+    tty: true
+    working_dir: /app
+    volumes:
+      - .:/app
+    command: ["celery", "-A", "tasks", "worker"]
+    depends_on:
+      - queue
+    links:
+      - queue
+  queue:
+    container_name: queue_server
+    image: rabbitmq
+    ports:
+      - "5672:5672"
+      - "25672:25672"
+      - "4369:4369"
+    tty: true
+
