--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,6 +1,7 @@
-run:
+include ../.env
+main:
 	cat ../requirements.txt > requirements.txt &&\
-	docker build --tag tiagoti2/python:3.6.0001 . &&\
-	docker push tiagoti2/python:3.6.0001 &&\
+	docker build --tag $(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_VERSION) . &&\
+	docker push $(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_VERSION) &&\
 	rm requirements.txt
 
