--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,9 @@ Flask==1.0.2
 requests==2.21.0
 gunicorn==19.9.0
 python-dotenv==0.10.1
-pytest==4.3.0
 celery==4.2.1
+flake8==3.6.0
+pytest==4.3.1
+coverage==4.5.3
+pytest-cov==2.6.1
+pytest-pycharm==0.5.0
