separe test from welcome

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,4 +8,11 @@ sonar.exclusions=\
   static/js/popper*.js, \
   static/js/jquery*.js, \
   templates/email/*.html, \
+  node_modules/**, \
+  venv/**, \
+  bin/**, \
+  coverage/**, \
   node_modules/**
+sonar.python.coveragePlugin=cobertura
+sonar.python.coverage.reportPaths=coverage/coverage.xml
+sonar.language=py
