--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,5 @@ sonar.exclusions=\
   node_modules/**
 sonar.python.coveragePlugin=cobertura
 sonar.python.coverage.reportPaths=coverage/coverage.xml
+sonar.coverage.exclusions=tests/**
 sonar.language=py
