--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ addopts =
     --cov=models
     --cov=services
     --cov-report html
+    --cov-report xml
     --cov-report term-missing
 
 #Sets the console output style while running tests
