--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,7 @@ services:
     volumes:
       - .:/app
     command: ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "1", "--threads", "1", "wsgi:app"]
+networks:
+  default:
+    external:
+      name: dev
